music and pictures

--- a/index.html
+++ b/index.html
@@ -13,8 +13,30 @@
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
+      <audio autoplay loop controls>
+        <source src=believer.mp3>
+      </audio>
       <h1>hello world!</h1>
-      <p>welcome to my ugly website where i try to make you super uncomfortable through the ugliness of this page!!!!!</p>
+      <br>
+      <div class="row">
+        <div class="column">
+          <img src="img/tiger1.jpg" alt="Snow" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="img/tiger2.jpg" alt="Forest" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="img/tiger3.jpg" alt= "cool tiger" style="width:100%">
+        </div>
+        <div class="column">
+          <p>
+            welcome to my ugly website where i try to make you super uncomfortable through the ugliness of this page!!!!!
+            ----random words to fill this page____
+            ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____
+            ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____ ----random words to fill this page____
+          </p>
+        </div>  
+      </div>
     </body>
 </html>
 
